# math_problems

./: .env.example  .gitignore  README.md  app.py  problems.json  pyproject.toml
static/: script.js  style.css
templates/: base.html  completion.html  problem.html
