[project]
name = "math-problems"
version = "0.1.0"
description = "A web application that trains its users to solve math text problems"
authors = [
    {name = "Tetiana Ivashyna",email = "ivashyna.t@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "flask (>=3.1.2,<4.0.0)",
    "python-decouple (>=3.8,<4.0)"
]

[dependency-groups]
dev = [
    "black (>=25.9.0,<26.0.0)",
    "flake8 (>=7.3.0,<8.0.0)",
    "pytest (>=8.4.2,<9.0.0)",
    "pytest-flask (>=1.3.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
